[gd_scene load_steps=10 format=3 uid="uid://cwaqdu0mey7gg"]

[ext_resource type="Script" uid="uid://bnmi1tvqyx4fd" path="res://player/local/player_local.gd" id="1_gucd0"]
[ext_resource type="Script" uid="uid://dygpiuulkydqd" path="res://player/local_weapon_holder.gd" id="2_y8ftr"]
[ext_resource type="Script" uid="uid://de6pek5twl361" path="res://player/local/camera_shake_component.gd" id="3_dog3v"]
[ext_resource type="PackedScene" uid="uid://qty0uvl51pci" path="res://ui/hud/hud.tscn" id="3_w115m"]
[ext_resource type="Script" uid="uid://bnnxupdxg0wkv" path="res://player/local/pause_screen.gd" id="5_xbm03"]
[ext_resource type="PackedScene" uid="uid://dk3we5bbd8hnb" path="res://ui/settings_widget/settings_widget.tscn" id="6_exmsb"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_s7k6g"]
radius = 0.25
height = 1.6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y8ftr"]
resource_local_to_scene = true
bg_color = Color(0, 0.960784, 0.294118, 0.796078)
skew = Vector2(0.3, 0)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="SphereShape3D" id="SphereShape3D_y8ftr"]
radius = 5.0

[node name="PlayerLocal" type="CharacterBody3D" node_paths=PackedStringArray("grenade_amount_label", "weapon_holder", "health_bar") groups=["PlayerLocal"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_gucd0")
grenade_amount_label = NodePath("HUD/MarginContainer/GrenadeInfoContainer/GrenadeAmountLabel")
weapon_holder = NodePath("Head/LocalWeaponHolder")
health_bar = NodePath("HUD/MarginContainer/HealthBar")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("CapsuleShape3D_s7k6g")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)

[node name="LocalWeaponHolder" type="Node3D" parent="Head"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.02, -0.025, -0.025)
script = ExtResource("2_y8ftr")
metadata/_custom_type_script = "uid://baehfch82gpaj"

[node name="CameraShakeComponent" type="Node3D" parent="Head" groups=["CameraShakeComponent"]]
script = ExtResource("3_dog3v")

[node name="Camera3D" type="Camera3D" parent="Head/CameraShakeComponent"]
current = true
near = 0.001

[node name="HUD" parent="." instance=ExtResource("3_w115m")]

[node name="HealthBar" parent="HUD/MarginContainer" index="0"]
theme_override_styles/fill = SubResource("StyleBoxFlat_y8ftr")

[node name="GrenadeDetectionArea3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="GrenadeDetectionArea3D"]
shape = SubResource("SphereShape3D_y8ftr")

[node name="FootstepTimer" type="Timer" parent="."]
one_shot = true

[node name="PauseScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_xbm03")

[node name="ColorRect" type="ColorRect" parent="PauseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -20.0
offset_right = 35.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="ResumeButton" type="Button" parent="PauseScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Resume"

[node name="ExitButton" type="Button" parent="PauseScreen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Exit Match"

[node name="SettingsWidget" parent="PauseScreen/VBoxContainer" instance=ExtResource("6_exmsb")]
layout_mode = 2
size_flags_horizontal = 4

[node name="LineEdit" type="LineEdit" parent="PauseScreen/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "Chat"
expand_to_text_length = true
clear_button_enabled = true

[connection signal="area_entered" from="GrenadeDetectionArea3D" to="." method="_on_grenade_detection_area_3d_area_entered"]
[connection signal="area_exited" from="GrenadeDetectionArea3D" to="." method="_on_grenade_detection_area_3d_area_exited"]
[connection signal="pressed" from="PauseScreen/VBoxContainer/ResumeButton" to="PauseScreen" method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseScreen/VBoxContainer/ExitButton" to="PauseScreen" method="_on_exit_button_pressed"]

[editable path="HUD"]
